Added assets. Background image, icon and fonts downloaded and added to repository

--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
 </head>
 <body>
     
+
+
+    <p>Photo by <a href="https://unsplash.com/photos/nfxIvG2B62I">Cole Keister</a> on unsplash.com.</p>
 </body>
 </html>
