Sidebar template complete. Added image, icon and reference to the side-bar. Side-bar positioned with flex positioning, absolute positioing used to align the icon and reference text.

--- a/index.html
+++ b/index.html
@@ -8,9 +8,18 @@
     <title>Sign-Up</title>
 </head>
 <body>
+    <div class="container">
+        <div class="sidebar">
+            <img id="main-image" src="assets/fern.jpg" alt="fern">
+            <div class="icon-holder">
+                <img id="icon" src="assets/haas_meats_white.png" alt="meats-icon">
+            </div>
+            <p class="ref">Photo by <a href="https://unsplash.com/photos/nfxIvG2B62I">Cole Keister</a> on unsplash.com.</p>
+        </div>
+        <div class="form"></div>
+    </div>
+
+
     
-
-
-    <p>Photo by <a href="https://unsplash.com/photos/nfxIvG2B62I">Cole Keister</a> on unsplash.com.</p>
 </body>
 </html>
