Added main content section. Scaffolded main form section, including header message.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,14 @@
             </div>
             <p class="ref">Photo by <a href="https://unsplash.com/photos/nfxIvG2B62I">Cole Keister</a> on unsplash.com.</p>
         </div>
-        <div class="form"></div>
+        <div class="main-content">
+            <div class="header">
+                <p>This is not a real online service! You know you need something like this in your life to help you relaie your deepest dreams. Sign up <em>now</em> to get started.</p>
+                <p>You <em>know</em> you want to.</p>
+            </div>
+            <form action="./index.html" method="post"></form>
+            <div class="footer"></div>
+        </div>
     </div>
 
 
